wp-content/themes/csweek/style.css
/* ... */
#daily-topics li{
  font-family: 'Magra', sans-serif;
  font-size: 16px;
  font-weight: 300;
  color: #666;
  line-height: 165%;
}


.list{
  float: left;
  width: 31%;
  list-style-position: inside;
  margin: auto 0;
  padding: 20px 0;
}

#contact h2{
  font-family: 'Lato', sans-serif;
  color: white;
  font-size: 18px;
  margin: 20px 0 10px 0;
  text-align: left;
}

#contact{
  padding-bottom: 35px;
  background: #1b1b1b;
}

#contact #ludvk{
  margin-top: 45px;
}

#contact a{
  cursor: pointer;
}

#contact p{
  margin-top: 5px;
  margin-top: 5px;
  margin-bottom: 0;
  color: #666;
}

#contact span{
  margin-top: 5px;
  margin-top: 5px;
  margin-bottom: 0;
  color: white;
}

#contact a{
  color: #F5C01D;
  text-decoration: none;
  font-size: 17px;
  font-weight: 400;

}

#contact a:hover {
  text-decoration: none;
  color: #F89406;
  -webkit-transition: .2s linear;
  -moz-transition: .2s linear;
  transition: .2s linear;
}

.fb-like{
  background-color: red;
  width: 250px;
  height: 80px;
  margin-top: 30px;
}

/* Article Styles */

#page{
  margin-top: -90px;
  padding-top: 90px;
  border-top: 2px solid #555;
  background-color: #333;
  border-bottom: 3px solid #555;
}

#page.contact-page{
  background: white;
}

#page article{
  margin-bottom: 70px;
}

.blog #page, .single-post #page{
  background: white;
  color: #333;
}

.blog #page h1, .blog #page h2, .blog #page h3, .blog #page h4, .blog #page h5, .blog #page h6, .blog #page p, .blog #page ul, .blog #page ol,
.single-post #page h1, .single-post #page h2, .single-post #page h3, .single-post #page h4, .single-post #page h5, .single-post #page h6, .single-post #page p, .single-post #page ul, .single-post #page ol{
  color: #333;
}

.blog #page .entry-content p, .blog #page .entry-content{
  color: #333;
}

.post-info{
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  font-weight: 500;
  color: #666;
  line-height: 165%;
}

#page .conainer{
  padding-bottom: 70px;
}

#page h4{
  font-family: 'Magra', sans-serif;
  font-size: 22px;
  font-weight: normal;
  color: #999;
  line-height: 200%;
}

#page h5{
  font-size: 18px;
  line-height: 20px;
  color: white;
  font-weight: normal;
}

#page h6{
  font-size: 18px;
  line-height: 20px;
  color: white;
  font-weight: normal;
}

#page p, #page li{
  font-family: 'Lato', sans-serif;
  font-size: 17px;
  font-weight: 300;
  color: white;
  line-height: 150%;
}

#page a {
  color: #F5C01D;
  /* text-decoration: none; */
}

#page a:hover {
  color: #F89406;
  -webkit-transition: .2s linear;
  -moz-transition: .2s linear;
  transition: .2s linear;
}

#page span {
  color: #ccc;
  text-decoration: none;
}


#page ol > li {
  font-size 22px;
  font-family: "Lato", sans-serif;
  font-weight: 400;
  color: white;
  line-height: 250%;
}

#page .speaker-profile, .workshop-profile, .team-profile {
  width: 225px;
  float: left;
  margin: 20px;
  text-align: center;
  height: 230px;
  overflow: hidden;
}

#page .speaker-profile > h2 {
  margin-bottom: -4px;
  font-size: 20px;
}

#page .speaker-profile > h5 {
  margin-top: 2px;
  color: #C5C5C5;
}


.speaker-profile img, .team-profile img{
  width: 103px;
  height: auto;
  display: block;
  border-radius: 50%;
  margin: 0 auto;
  border: 2px solid white;
  position: relative;
}

.workshop-profile img{
  border-radius: 50%;
  display: block;
  box-shadow: 0 0 0 5px white;
  width: 100px;
  height: 100px;
  margin: 0 auto;
  text-align: center;
  position: relative;
  top: 10px;
}

#page .city{
  margin-bottom: 0;
}

.team-profile img{
  margin-bottom: 20px;
}

img.linkedin-profile{
  margin: 0;
}

.team-profile h5{
  font-size: 14px;
  font-weight: 400;
}

.workshop-content h2{
  margin-bottom: 0;
}

.workshop-content h3{
  margin-top: 0;
}


.cal-icon {
  display: inline-block;
  margin-right: 5px;
  margin-top: -2px;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  background: url(images/eventspriteling.png) no-repeat;
  padding: 0;
  line-height: 16px;
}

.add_to_calendar {
  background-position: 0 -60px;
  width: 16px;
}

.add_to_outlook {
  background-position: -16px -60px;
  width: 20px;
}

.add_to_google {
  background-position: -52px -60px;
}

.add_to_yahoo {
  background-position: -36px -58px;
}

.add_to_ical {
  background-position: -68px -60px;
}

article .aligncenter{
  float: none;
  clear: both;
  display: block;
  margin: 20px auto;
  padding: 6px;
  border: 3px solid #EEE;
}

#page article h2{
  margin-bottom: 0;
  line-height: 130%;
}

.post-info{
  margin-bottom: 15px;
}

#page blockquote{
  padding: 0 0 0 15px;
  margin: 0 0 20px;
  border-left: 2px solid #EEE;
}

.red-arrow{
  color: red;
  font-size: 22px;
  font-weight: 900;
  padding-left: 3px;
}

strong{
  font-weight: 500;
}

.container article img {
  border: 2px solid white;
}

#page article .wp-caption-text{
  font-size: 14px;
}

#page .blog-container{
  float: left;
  width: 70%;
  margin-top: 28px;
}
.the-content strong{
  font-weight: 700;
}

.the-content img{
  display: block;

}

.the-content{
  clear: both;
  overflow: hidden;
  padding-bottom: 50px;
}

.the-content img.alignleft{
  float: left;
  margin: 0 10px 10px 0;
}

.the-content img.alignright{
  float: right;
  margin: 0 0 10px 10px;
}

#sidebar{
  width: 25%;
  overflow: hidden;
  float: right;
}


#sidebar h3{
  font-weight: 600;
  font-size: 16px;
}
#sidebar a{
  font-size: 14px;
}

.ep_social_widget img {
  margin-left: 4px;
  position: relative;
  top: -10px;
}

#searchsubmit{
  padding: 5px 15px;
  text-transform: uppercase;
  font-family: 'Magra', sans-serif !important;
  font-weight: bold;
  font-size: 17px;
  color: #996533;
  text-shadow: 0 1px 0 rgba(255,255,255,0.5);
  background: #F5C01D;
  border: 1px solid rgba(255,255,255,0.3);
  border-radius: 6px;
  box-shadow: 0 1px 0 #B88A37,
                0 2px 0 #B88A37,
                0 3px 0 #B88A37,
                0 4px 0 #B88A37,
                0 5px 0 #B88A37,

                0 7px 4px rgba(0,0,0,.4);
}
/* ... */

